# translint

./: .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  translint.py
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
examples/locales/: de.json  en.json  fr.json
skills/translint/: SKILL.md
tests/: test_translint.py
tests/fixtures/cli/: clean.json  en.json  extra_only.json
tests/fixtures/json/: de.json  en.json  fr.json
tests/fixtures/nested/: de.json  en.json
tests/fixtures/po/: en.po  es.po
tests/fixtures/properties/: en.properties  ja.properties
tools/: extract_i18n.mjs
web/: app.js  index.html  styles.css
web/i18n/: .translintrc.json  GLOSSARY.md  ar.js  bn.js  cs.js  da.js  de.js  el.js  en.js  es.js  fa.js  fi.js  fr.js  he.js  hi.js  hu.js  id.js  index.js  it.js  ja.js  ko.js  nb.js  nl.js  pl.js  pt-BR.js  ro.js  ru.js  sv.js  th.js  tl.js  tr.js  uk.js  vi.js  zh-Hans.js  zh-Hant.js
