[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "translint"
version = "0.4.0"
description = "Catch broken translations before they ship: missing keys, placeholder mismatches, empty and untranslated values."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cole Munz" }]
keywords = ["i18n", "l10n", "localization", "linter", "translation", "ci"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Localization",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
translint = "translint:main"

[project.urls]
Homepage = "https://github.com/munzzyy/translint"
Issues = "https://github.com/munzzyy/translint/issues"

[tool.setuptools]
py-modules = ["translint"]
